Update tags creation and deletion